# asset-pilot-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  schema_llm_context 1.dbml
.github/workflows/: deploy.yml
ai_service/: db.py  errors.py  formatting.py  models.py  pipeline.py  providers.py  roles.py  schema.py  sql_check.py  synthesis.py
ai_service/prompts/: __init__.py  answer_synthesis.py  sql_generation.py
app/: exception_handlers.py  main.py  routes.py  schemas.py
app/utils/: pagination.py  request_context.py
terraform/: main.tf  providers.tf  variables.tf
