[project]
name = "ai-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cerebras>=0.0.1",
    "fastapi>=0.139.0",
    "google-genai>=2.10.0",
    "groq>=0.37.1",
    "httpx>=0.28.1",
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-cerebras>=0.8.2",
    "langchain-deepseek>=1.1.0",
    "langchain-google-genai>=4.2.6",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-mistralai>=1.1.5",
    "langchain-nvidia-ai-endpoints>=1.4.3",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.3",
    "langchain-openrouter>=0.2.5",
    "langchain-xai>=1.2.2",
    "langfuse>=4.13.0",
    "loguru>=0.7.3",
    "mistralai>=2.5.1",
    "ollama>=0.6.2",
    "openai>=2.44.0",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
    "voyageai>=0.4.1",
]
